@@ -3,7 +3,9 @@ package io.mangoo.routing;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 
@@ -11,10 +13,12 @@ import org.apache.commons.io.IOUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.boon.json.JsonFactory;
+import org.scribe.utils.Preconditions;
 
 import com.google.common.base.Charsets;
 
 import io.mangoo.enums.ContentType;
+import io.undertow.server.handlers.Cookie;
 import io.undertow.util.HttpString;
 import io.undertow.util.StatusCodes;
 
@@ -27,6 +31,7 @@ public final class Response {
     private static final Logger LOG = LogManager.getLogger(Response.class);
     private Map<HttpString, String> headers = new HashMap<HttpString, String>();
     private Map<String, Object> content = new HashMap<String, Object>();
+    private List<Cookie> cookies = new ArrayList<Cookie>(); 
     private String redirectTo;
     private String contentType = ContentType.TEXT_HTML.toString();
     private String charset = Charsets.UTF_8.name();
@@ -68,6 +73,10 @@ public final class Response {
 
     public String getBody() {
         return this.body;
+    }
+    
+    public List<Cookie> getCookies() {
+        return this.cookies;
     }
 
     public byte[] getBinaryContent() {
@@ -185,6 +194,8 @@ public final class Response {
      * @return A response object {@link io.mangoo.routing.Response}
      */
     public static Response withRedirect(String redirectTo) {
+        Preconditions.checkNotNull(redirectTo, "redirectTo can not be null");
+        
         return new Response(redirectTo);
     }
 
@@ -195,6 +206,7 @@ public final class Response {
      * @return A response object {@link io.mangoo.routing.Response}
      */
     public Response andTemplate(String template) {
+        Preconditions.checkNotNull(template, "template can not be null");
         this.template = template;
 
         return this;
@@ -207,6 +219,7 @@ public final class Response {
      * @return A response object {@link io.mangoo.routing.Response}
      */
     public Response andContentType(String contentType) {
+        Preconditions.checkNotNull(contentType, "contentType can not be null");
         this.contentType = contentType;
 
         return this;
@@ -219,6 +232,7 @@ public final class Response {
      * @return A response object {@link io.mangoo.routing.Response}
      */
     public Response andCharset(String charset) {
+        Preconditions.checkNotNull(charset, "charset can not be null");
         this.charset = charset;
 
         return this;
@@ -250,6 +264,19 @@ public final class Response {
 
         return this;
     }
+    
+    /**
+     * Adds an additional Cookie to the response which is passed to the client
+     * 
+     * @param cookie The cookie to add
+     * @return A response object {@link io.mangoo.routing.Response}
+     */
+    public Response andCookie(Cookie cookie) {
+        Preconditions.checkNotNull(cookie, "cookie can not be null");
+        this.cookies.add(cookie);
+        
+        return this;
+    }
 
     /**
      * Converts a given Object to JSON and passing it to the response. If an object is given, no
@@ -260,6 +287,8 @@ public final class Response {
      * @return A response object {@link io.mangoo.routing.Response}
      */
     public Response andJsonBody(Object jsonObject) {
+        Preconditions.checkNotNull(jsonObject, "jsonObject can not be null");
+        
         this.contentType = ContentType.APPLICATION_JSON.toString();
         this.body = JsonFactory.create().toJson(jsonObject);
         this.rendered = true;
@@ -274,6 +303,8 @@ public final class Response {
      * @return A response object {@link io.mangoo.routing.Response}
      */
     public Response andBinaryFile(File file) {
+        Preconditions.checkNotNull(file, "file can not be null");
+        
         try (FileInputStream fileInputStream = new FileInputStream(file)){
             this.binaryFileName = file.getName();
             this.binaryContent = IOUtils.toByteArray(fileInputStream);
@@ -293,6 +324,8 @@ public final class Response {
      * @return A response object {@link io.mangoo.routing.Response}
      */
     public Response andBinaryContent(byte [] content) {
+        Preconditions.checkNotNull(content, "content can not be null");
+        
         this.binaryContent = content.clone();
         this.binary = true;
         this.rendered = true;
@@ -337,6 +370,7 @@ public final class Response {
      * @return A response object {@link io.mangoo.routing.Response}
      */
     public Response andHeader(HttpString key, String value) {
+        Preconditions.checkNotNull(key, "key can not be null");
         this.headers.put(key, value);
 
         return this;
@@ -350,6 +384,7 @@ public final class Response {
      * @return A response object {@link io.mangoo.routing.Response}
      */
     public Response andContent(Map<String, Object> content) {
+        Preconditions.checkNotNull(content, "content can not be null");
         this.content.putAll(content);
 
         return this;
@@ -363,6 +398,7 @@ public final class Response {
      * @return A response object {@link io.mangoo.routing.Response}
      */
     public Response andHeaders(Map<HttpString, String> headers) {
+        Preconditions.checkNotNull(headers, "headers can not be null");
         this.headers.putAll(headers);
 
         return this;
